--- a/losers-web/src/Users/login.css
+++ b/losers-web/src/Users/login.css
@@ -84,4 +84,27 @@
     margin:0%;
     margin-left: 5px;
   }
-  
+
+.inline {
+  display: flex;
+  align-items: center;
+}
+
+.inline p {
+  margin-bottom: 0;
+}
+
+.profile-picture {
+  display: flex;
+  justify-content: center; 
+  align-items: flex-start; 
+  padding-top: 20px; 
+}
+
+.profile-picture img {
+  border-radius: 30%;
+  /* width: fit-content;
+  height: fit-content; */
+  width: 100px;
+  height: 100px;
+}
